	now also migrated from the old format were automatic localhost logins were
	possible, which no longer is, this fixes #1814.
	* Implemented sequential downloads UI handling.
	* #378: Allow showing a pieces bar instead of a regular progress bar in a
	torrent's status tab.
	* #2093: Make torrent opening compatible with all unicode paths.

==== WebUI ====
	* Server (deluge-web) now daemonizes by default, use -d or --do-not-daemonize to disable.

==== Blocklist Plugin ====
	* #1382: Implemented whitelist support to both core and GTK UI.
	* Implemented ip filter cleaning before each update. Restarting the deluge
	daemon is no longer needed.
	* If "check_after_days" is 0(zero), the timer is not started anymore. It
	would keep updating one call after the other. If the value changed, the
	timer is now stopped and restarted using the new value.

=== Deluge 1.3.7 (In Development) ===
==== GtkUI ====
	* Fix issue with Plugins that add Tab to torrentdetails
	* Fix the scalable icon install directory

==== Extractor ====
	* #2290: Fix dotted filenames being rejected

=== Deluge 1.3.6 (25 Feburary 2013) ===
==== Core ====
	* Catch & log KeyError when removing a torrent from the queued torrents set
	* Fix moving/renaming torrents issues when using libtorrent 0.16
	* Make sure queue order is preserved when restarting
	* #2160: Disable use of python bindings for libtorrent extensions and replace with session flag
	* #2163: Fix unable add torrent file with empty (0:) encoding tag
	* #2201: Fix error in authmanager if auth file has extra newlines
	* #2109: Fix the Proxy settings not being cleared by setting None
	* #2110: Fix accepting magnet uris with xt param anywhere within them
	* #2204: Fix daemon shutdown hang with large numbers of torrents

==== Client ====
	* Fix keyerrors after removing torrents from UIs

==== GtkUI ====
	* Add move completed option to add torrent dialog
	* Prevent jitter in torrent view
	* Fix torrent creation with non-ascii characters